# opencode-pet

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
public/pets/: ATTRIBUTION.md
scripts/: gen_cat_sprites.py  generate_pet_assets.py  process_sprites.py
src/: App.tsx  constants.ts  index.css  opencodeDigest.ts  store.ts  tauriEnv.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-template.rgba
src-tauri/src/: chat.rs  db.rs  events.rs  lib.rs  main.rs  monitor.rs  opencode_stream.rs  session_summary.rs
src/components/: CatOffice.tsx  CatOfficeScene.tsx  SessionPicker.tsx  SettingsPanel.tsx  XiaoHei.tsx
src/components/officeScene/: assets.ts  canvasPrimitives.ts  hitTesting.ts  layout.ts  model.ts  renderer.ts  room.ts  stage.ts  text.ts  types.ts
