[package]
name = "opencode-pet"
version = "0.3.0"
description = "A local desktop cat companion for monitoring OpenCode sessions"
authors = ["opencode-pet contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "opencode_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = { version = "6", features = ["macos_kqueue"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
